# Engine

./: .gitignore  BuildWin32.bat  CMakeLists.txt  Uwp64.bat
Platform/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  Logger.h
Platform/Android/: AndroidApp.cpp  AndroidApp.h  AndroidMain.cpp  VulkanLoader.hpp
Platform/Common/: Asset.h  AssetManager.cpp  AssetManager.h
Platform/Windows/: Win32Main.cpp
